--- a/pipewire/Cargo.toml
+++ b/pipewire/Cargo.toml
@@ -26,7 +26,7 @@ bitflags = "2"
 once_cell = "1.0"
 
 [dev-dependencies]
-structopt = "0.3"
+clap = { version = "4.3.2", features = ["derive"] }
 once_cell = "1.5"
 
 [features]
