--- a/libspa/Cargo.toml
+++ b/libspa/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["pipewire", "multimedia", "audio", "video"]
 spa_sys = { package = "libspa-sys", version = "0", path = "../libspa-sys" }
 bitflags = "2"
 libc = "0.2"
-errno = "0.3"
+nix = "0.26"
 cookie-factory = "0.3.2"
 nom = "7"
 convert_case = "0.6"
