sys crates: Enable "runtime" feature of bindgen dependency
Using bindgen without the "runtime" feature leads to the clang-sys crate
trying to link to the clang library in less reliable ways, which,
among other issues, can lead to compilation failure if multiple versions
of bindgen are used in a project.

--- a/libspa-sys/Cargo.toml
+++ b/libspa-sys/Cargo.toml
@@ -16,7 +16,7 @@ keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]
 [dependencies]
 
 [build-dependencies]
-bindgen = { version = "0.66", default-features = false }
+bindgen = { version = "0.66", default-features = false, features = ["runtime"] }
 cc = "1.0"
 system-deps = "6"
 
