--- a/pipewire-sys/Cargo.toml
+++ b/pipewire-sys/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]
 spa_sys = { package = "libspa-sys", version = "0", path = "../libspa-sys" }
 
 [build-dependencies]
-bindgen = { version = "0.66", default-features = false }
+bindgen = { version = "0.66", default-features = false, features = ["runtime"] }
 system-deps = "6"
 
 [package.metadata.system-deps]
