Add feature guard for spa_type_info symbols introduced in pipewire 0.3.65

--- a/libspa-sys/Cargo.toml
+++ b/libspa-sys/Cargo.toml
@@ -26,3 +26,6 @@ libpipewire = { name = "libpipewire-0.3", version = "0.3" }
 
 [lib]
 doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313
+
+[features]
+v0_3_65 = []
