--- a/libspa/Cargo.toml
+++ b/libspa/Cargo.toml
@@ -35,4 +35,5 @@ libspa = { name = "libspa-0.2", version = "0.2" }
 
 [features]
 v0_3_33 = []
-v0_3_75 = ["v0_3_33"]
+v0_3_65 = ["v0_3_33", "spa_sys/v0_3_65"]
+v0_3_75 = ["v0_3_65"]
