--- a/pipewire/Cargo.toml
+++ b/pipewire/Cargo.toml
@@ -42,5 +42,5 @@ v0_3_49 = ["v0_3_45"]
 v0_3_53 = ["v0_3_49"]
 v0_3_57 = ["v0_3_53"]
 v0_3_64 = ["v0_3_57"]
-v0_3_65 = ["v0_3_64"]
+v0_3_65 = ["spa/v0_3_65", "v0_3_64"]
 v0_3_77 = ["v0_3_65"]
