--- a/pipewire/Cargo.toml
+++ b/pipewire/Cargo.toml
@@ -20,7 +20,7 @@ spa = { package = "libspa", version = "0.7", path = "../libspa" }
 anyhow = "1"
 thiserror = "1"
 libc = "0.2"
-nix = "0.26"
+nix = { version = "0.27", features = ["signal", "fs"] }
 bitflags = "2"
 once_cell = "1.0"
 
