--- a/libspa-sys/Cargo.toml
+++ b/libspa-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libspa-sys"
-version = "0.7.2"
-authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
+version = "0.8.0"
+authors = ["Tom Wagner <tom.a.wagner@protonmail.com", "Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
 edition = "2021"
 links = "libspa-0.2"
 categories = ["api-bindings", "multimedia"]
