--- a/pipewire-sys/Cargo.toml
+++ b/pipewire-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pipewire-sys"
-version = "0.7.2"
-authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
+version = "0.8.0"
+authors = ["Tom Wagner <tom.a.wagner@protonmail.com", "Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
 edition = "2021"
 links = "pipewire-0.3"
 categories = ["api-bindings", "multimedia"]
@@ -14,7 +14,7 @@ documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire_sys
 keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]
 
 [dependencies]
-spa_sys = { package = "libspa-sys", version = "0.7", path = "../libspa-sys" }
+spa_sys = { package = "libspa-sys", version = "0.8", path = "../libspa-sys" }
 
 [build-dependencies]
 bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
